--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ form {
 }
 
 label {
-    font-family: Arial;
+    /*font-family: Arial;*/
     margin: 10px 0 5px;
     text-align: left;
 }
@@ -106,6 +106,11 @@ button:hover {
     height: 75px;
     object-fit: cover;
     border: 2px solid transparent;
+}
+
+.headshot-instruction {
+    font-family: Arial;
+    text-align: left;
 }
 
 input[type="radio"]:checked + .background-preview {
